# Text2Gcode

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build-release.yaml
src/: main.py
